--- a/content/03-new-to-cardano/06-cardano-tracking-tools.mdx
+++ b/content/03-new-to-cardano/06-cardano-tracking-tools.mdx
@@ -54,6 +54,7 @@ assets and tokens, you can use these tools:
 - [AdaStat (tokens)](https://adastat.net/tokens)
 - [Adatools (tokens)](https://adatools.io/tokens)
 - [Cardanoscan (tokens)](https://cardanoscan.io/tokens)
+- [Pool.pm (tokens)](https://pool.pm/tokens)
 
 ### Exploring stake pools
 
@@ -65,5 +66,6 @@ IDs, you can use these tools:
 - [POOLSTATS](https://poolstats.org/#)
 - [Adatools (pools)](https://adatools.io/pools)
 - [Cardanoscan (pools)](https://cardanoscan.io/pools)
+- [Pool.pm (pools)](https://pool.pm/search)
    
 > Note: IOHK has developed a stake pool metadata aggregation server [(SMASH)](/getting-started/operating-a-stake-pool/SMASH) to provide the community with a list of verified stake pools with valid metadata. Smash is integrated with the Daedalus wallet, and users can see a list of valid stake pools in the delegation center tab.
