adding a link to sample DB Sync queries

--- a/content/05-explore-cardano/02-cardano-architecture/03-cardano-db-sync-best-practices.mdx
+++ b/content/05-explore-cardano/02-cardano-architecture/03-cardano-db-sync-best-practices.mdx
@@ -62,5 +62,5 @@ checkout using:
 PGPASSFILE=config/pgpass-mainnet psql cexplorer
 ```
 
-You can also find the sample queries in the next section (Working with Cardano DB Sync). 
+[You can find a list of sample queries here.](https://github.com/input-output-hk/cardano-db-sync/blob/master/doc/interesting-queries.md) 
 
