--- a/content/07-native-tokens/06-exchange-multi-asset-management-scenarios.mdx
+++ b/content/07-native-tokens/06-exchange-multi-asset-management-scenarios.mdx
@@ -1,139 +1,223 @@
 ---
-title: Minimum ada value requirement
-metaTitle: Minimum ada value requirement
+title: Exchange multi-asset management scenarios
+metaTitle: Exchange multi-asset management scenarios
 ---
 
-UTXOs on the ledger may contain a heterogeneous collection of tokens, including
-ada, which is a limited resource in the Cardano system. Requiring some amount of
-ada to be included in every UTXO (where that amount is based on the size of the
-UTXO, in bytes), limits the maximum total size taken up by UTXO entries on the
-ledger at any given time.
+Native assets follow a set of predefined rules known as _minting policies_,
+which are defined by users who want to create a new asset. These policies set
+the upper and lower limits of what a token can do, who can do it, and might also
+define the point in the transaction lifecycle at which it can be done.
 
-The maximum possible UTXO size (the sum of the sizes of all UTXO entries) is
-implicitly adjusted by raising and lowering the `min-ada-value` parameter. In
-this way, the constraint protects the Cardano ledger from growing beyond a
-certain size. A ledger without a size bound is vulnerable to being populated by
-so much data that users will unable to process it (or run a node) with machines
-meeting the recommended specifications for running a node.
+A minting policy is bound by the network protocol and ledger-defined rules. One
+such rule is
+[the minimum UTXO value](https://cardano-ledger.readthedocs.io/en/latest/explanations/min-utxo.html)
+(the minimum amount of ada that must be sent in a single transaction.) The value
+is currently set to 1 ada, so to transact any native asset on the Cardano
+network, a minimum of 1 ada must be included and accounted for within the
+transaction. This does not mean that you have to send only 1 ada to transact
+native assets. You can use any amount of ada, so it is important that exchanges
+and wallets are aware of this, and know what to do in such cases.
 
-### The ada-only case
+Note: It is possible to verify and pinpoint these specific native asset
+transactions using
+[cardano-graphql](https://github.com/input-output-hk/cardano-graphql#overview)
+or [cardano-rosetta](https://docs.cardano.org/rosetta/learn-rosetta).
 
-Because of the `min-ada-value constraint`, a guaranteed bound on the number of
-entries in an ada-only UTXO is:
+## Multi-asset management scenarios
 
-`max No. UTxOs <= (total ada in circulation) / (minimum ada value)`
+Exchanges listing ada usually might encounter two specific scenarios:
 
-This formula bounds the number of UTXO entries, but says nothing about adjusting
-for the size of each entry, because all UTXO entries that contain only ada are
-(close enough to) the same size. The size of the UTXO set is bounded by:
+- Scenario 1 - Spending a UTXO with a multi-asset attached
+- Scenario 2 - Unexpectedly received multi-asset in cardano-wallet
 
-`max UTxO size <= (max No. UTxOs) * (max UTxO entry size) + overhead`
+## Scenario 1: Spending a UTXO with a multi-asset attached
 
-In the multi-asset Cardano ledger, UTXO entries will have different sizes. In
-particular, any entries containing a non-ada asset contain records of the Policy
-IDs, asset names, and quantities of each of the non-ada assets. To maintain the
-max UTXO size bound on the UTXO stored on the ledger with variable entry sizes,
-we must adjust the minimum ada value for each UTXO entry, based on its size.
+> Note: This scenario applies to exchanges that manage their own UTXOs.
 
-Below, we present a calculation and a more detailed justification for this
-adjustment.
+### How to pinpoint UTXOs with a native asset attached
 
-### Min-ada-value calculation
+Exchanges and third-party wallets that manage their own UTXOs often use a local
+block explorer (`cardano-graphql` or `cardano-rosetta`, for example).
 
-The minimum ada amount required to be contained in every ada-only UTXO with no
-additional data (i.e., a UTXO containing only the address and ada amount) is a
-protocol parameter of the Cardano system, called : `minUTxOValue`
+`cardano-graphql` is a Cardano API query language and a runtime component for
+fulfilling queries with existing data extracted from the
+[cardano-db-sync](https://github.com/input-output-hk/cardano-db-sync#cardano-db-sync)
+PostgreSQL database. It provides a complete and understandable description of
+this data, and gives clients the power to request the necessary information.
+This, in turn, both simplifies the evolution of client APIs’ overtime and
+enables powerful developer tools.
 
-The size of such a UTXO has a upper bound : `adaOnlyUTxOSize`
+Cardano has adapted `cardano-rosetta` (initially developed by Coinbase as
+blockchain middleware) to help exchanges and third-party wallets extract
+blockchain data and integrate with Cardano. See this
+[Readme file](https://github.com/input-output-hk/cardano-rosetta/blob/master/docs/multi-assets-support.md)
+for more information about extracting multi-asset information from
+`cardano-rosetta`.
 
-We can calculate the upper bound on size of a UTXO u containing non-ada tokens :
-sizeBound (u)
+### Getting started with native assets
 
-We want to calculate the min-ada required to be contained in _u_ : `minAda (u)`
+After understanding what a transaction with native assets might look like, you
+might want to create or burn some native assets or tokens on the testnet. See
+[these prerequisites](https://docs.cardano.org/native-tokens/getting-started#prerequisites)
+and follow the below steps to start minting some native assets:
 
-A `minUTxOValue` amount of ada pays for `adaOnlyUTxOSize` bytes of UTXO storage
-on the ledger. To make the min-ada-value proportional for all UTXOs, the
-following proportion must be satisfied:
+- Connect `cardano-node` to testnet
+- Build `cardano-node` and connect to testnet
+- Download `cardano-cli` prebuilt binary or use build from source
+- Follow [these steps](https://docs.cardano.org/native-tokens/getting-started)
 
-`minUTxOValue / adaOnlyUTxOSize = minAda (u) / sizeBound (u)`
+### Spending UTXO with native assets attached
 
-The `min-ada` calculation for any UTXO approximates the above formula. This uses
-the constants
+When building a transaction with native assets using `cardano-cli` as outlined
+in
+[this section](https://docs.cardano.org/native-tokens/getting-started/#example:mintinganewnativetoken),
+it is important to account for two things:
 
-`coinSize = 0` (note: this is an implementation error, and will be changed to
-the correct value, 2, in the next fork. This will decrease the minimum ada value
-by a small percentage)
+1. The ada value you wish to send
+2. The amount of tokens
 
-`utxoEntrySizeWithoutVal = 27`
+The above is also true for any exchange or third-party that wants to either
+spend, return, or store any multi-asset. By definition, receiving a multi-asset
+is the same as receiving any other Cardano transaction. The only difference is
+that some other data -like multi-asset- might be attached to the transaction.
 
-`adaOnlyUTxOSize = utxoEntrySizeWithoutVal + coinSize = 27`
+We strongly recommend that all exchanges and third-party wallets verify all
+transactions in the block for multi-assets and handle accordingly. How these
+types of transactions are managed is an enterprise decision.
 
-The functions used in the formula below are:
+### What to do with unwanted tokens?
 
-`quot a b` is the quotient of `(a, b)`, i.e.,`quot 11 5 = 2` because
-`11 = 5 * 2 + 1`
+The purpose of any multi-asset can be arbitrary, but it is important to remember
+that, much like ada, a multi-asset is part of the transaction and needs to be
+handled and balanced in the same way.
 
-numAssets the number of distinct AssetIDs in B, eg. if B = [(policyID1,
-myAssetNameSBS, 10), (policyID1, yourAssetNameSBS, 5), (policyID2,
-someAssetNameSBS, 250), (policyID3, someAssetNameSBS, 43)]
+Multi-assets will cause no issue whether located in the issuer’s wallet or the
+exchange’s wallet. It will exist until it is redeemed, used, or burned.
 
-`numAssets B = 4`
+Ultimately, the decision of what to do with a multi-asset lies with the exchange
+or the third-party wallet. More specifically, with an exchange that manages
+their own UTXOs.
 
-`numPIDs`: the number of distinct PolicyIDs in `B` eg. if `B` is as above,
-`numPIDs B = 3` (which are `policyID1, policyID2, policyID3`)
+[cardano-wallet](https://github.com/input-output-hk/cardano-wallet/releases)
+uses a UTXO algorithm to handle and manage UTXOs. A multi-asset handled by
+`cardano-wallet` on the blockchain could easily go unnoticed.
 
-`sumAssetNameLengths`: the sum of the length of the ByteStrings representing
-distinct asset names e.g., if `B` is as above,
+Choosing a UTXO means having to account for the asset attached to that UTXO. If
+this extra input is not handled correctly, an out-of-balance error will occur.
 
-`sumAssetNameLengths B = length myAssetNameSBS + length yourAssetNameSBS + length someAssetNameSBS`
+You control what to do with the native asset. You can either return it to the
+sender only if you know the address or alternatively you can move the native
+asset in and address in your wallet adhering to the network guidelines and the
+minimum UTXO value.
 
-`pidSize`: the length of the hash of a policy (i.e., the length of the
-PolicyID). These lengths are the same for all policies, and are dictated by the
-current hashing algorithm used to compute payment and staking address hashes.
+Read the
+[native tokens topic](https://docs.cardano.org/native-tokens/getting-started#example:mintinganewnativetoken)
+for more information on creating and balancing a transaction with a native asset
+attached.
 
-`pidSize B = 28` currently (also, in the next era)
+## Scenario 2 - Unexpectedly received multi-asset in cardano-wallet
 
-`roundupBytesToWords` converts bytes to 8-byte long words, rounding up
-`roundupBytesToWords b = quot (b + 7) 8`
+> Note: This scenario only applies to exchanges that use `cardano-wallet`.
 
-`size B` is size of the token bundle B in 8-byte long words:
-`size B = 6 + roundupBytesToWords (((numAssets B) * 12) + (sumAssetNameLengths B) + ((numPids B) * pidSize))`
+### Verify that you have received a multi-asset
 
-For a UTXO containing a token bundle B the min-ada-value calculation is as
-follows :
+1. Check the wallet information to confirm
+2. Run the following curl command to check and verify the wallet information:
 
-- **Case 1**: Token bundle B in the UTXO `u` contains only ada (no other tokens)
-  `minAda (u) = minUTxOValue`
-- **Case 2**: Token bundle B in the UTXO `u` contains ada as well as other
-  tokens
-  `minAda (u) = max (minUTxOValue, (quot (minUTxOValue, adaOnlyUTxOSize)) * (utxoEntrySizeWithoutVal + (size B)))`
+**Byron**
 
-As a consequence of this design,
+```
+curl http://localhost:8090/v2/byron-wallets/
+```
 
-- It is impossible to make outputs containing only custom tokens
-- The number of each kind of token in an output does not affect the
-  min-ada-value of the output, but the number of types of tokens contained in an
-  output increases the min-value.
-- The reason for this is that the names and policy IDs of each of the types of
-  tokens take up additional space in the output.
-- Sending custom tokens to an address always involves sending the min-ada-value
-  of ada to that address alongside the custom tokens (by including the ada in
-  the same output). If - the address is not spendable by the user sending the
-  tokens, the ada sent alongside the tokens no longer belongs to the sender.
-- Before transferring custom tokens, users may choose to use off-chain
-  communication to negotiate who supplies the ada to cover the min-ada-value in
-  the output made by the transferring transaction
-- To recover the ada stored alongside custom tokens in an output O, the user
-  must either: a) Spend the output O, and burn the custom tokens stored therein
-  b) Spend an output O and an output O’, and consolidate the tokens therein with
-  the same collection of types of custom tokens stored in another output (spent
-  within the same transaction) E.g., `(CryptoDoggiesPolicy, poodle, 1)`
-  contained in O can be consolidated with `(CryptoDoggiesPolicy, poodle, 3)` in
-  O’, for a total of `(CryptoDoggiesPolicy, poodle, 4)` in a new output made by
-  the consolidating transaction.
+**Shelley**
 
-- Splitting custom tokens into more outputs than they were contained in before
-  the transaction getting processed requires using, in total, more ada to cover
-  the min-ada-value, as ada is needed in the additional outputs.
+```
+http://localhost:8090/v2/wallets
+```
 
-![Minimum ada value](min-ada.png)
+3. Check the assets section:
+
+```
+"assets": {
+      "total": [
+        {
+          "asset_name": "6e7466636f696e",
+          "quantity": 10,
+          "policy_id": "f625fdd8e936d56d3d9943557380cff64d0db66e545f99a3cc01ab97"
+        }
+      ],
+      "available": [
+        {
+          "asset_name": "6e7466636f696e",
+          "quantity": 10,
+          "policy_id": "f625fdd8e936d56d3d9943557380cff64d0db66e545f99a3cc01ab97"
+        }
+      ]
+    }
+```
+
+### Token redemption or removing unwanted multi-assets from cardano-wallet
+
+Tokens created using a minting policy follow a predefined set of rules. The
+minting policy might allow token holders to burn or create new tokens, for
+example. In most cases, if you receive unwanted tokens, you will need to either
+return them to the issuer or sender, or put them somewhere else for safekeeping.
+Read the
+[minting policies topic](https://cardano-ledger.readthedocs.io/en/latest/explanations/policies.html)
+for more information on minting policies.
+
+> Note: The minimum cost of sending any amount of native asset is one ada, plus
+> the transaction fee. Read the
+> [minimum ada value requirement topic](https://cardano-ledger.readthedocs.io/en/latest/explanations/min-utxo.html)
+> for more information on the minimum UTXO requirements.
+
+**Option 1**: Send tokens back to the issuer or sender:
+
+1. Verify the sender’s address or issuer’s address.
+2. Create a JSON transaction in cardano-wallet with the minimum UTXO amount of
+   one ada and include the native asset.
+
+**Sample transaction for sending the multi-asset:**
+
+```
+curl -XPOST \http://localhost:8090/v2/byron-wallets/{wallet_id}/transactions \
+-H 'Content-Type: application/json; charset=utf-8'
+-d '{"payments": [{"address":"{destination_address}",
+"amount":{"quantity":3000000,"unit":"lovelace"},
+"assets": [{"policy_id":"asset_policy_id",
+"asset_name": "6e7466636f696e",
+"quantity": 5}]}],
+"passphrase":"myfirstpassword"}
+```
+
+3. Verify that the multi-asset transaction is complete, and that the assets have
+   been moved from the wallet.
+
+**Byron**
+
+```
+curl http://localhost:8090/v2/byron-wallets/
+```
+
+**Shelley**
+
+```
+curl http://localhost:8090/v2/wallets
+```
+
+4. You should see the following result:
+
+```
+"assets": {
+      "total": [],
+      "available": [] }
+```
+
+**Option 2**: Move tokens to an address inside the existing wallet:
+
+1. Verify that you have native tokens in the wallet.
+2. Specify an address within the wallet (or elsewhere) to send the tokens.
+3. Follow the steps in Option 1 to send the tokens to an address not one ada min
+   UTXO value.
+4. Keep track of the address containing native assets.
