--- a/content/07-native-tokens/06-exchange-multi-asset-management-scenarios.mdx
+++ b/content/07-native-tokens/06-exchange-multi-asset-management-scenarios.mdx
@@ -63,7 +63,7 @@ You control what to do with the native asset. You can either return it to the se
 
 Read the [native tokens topic](https://docs.cardano.org/native-tokens/getting-started#example:mintinganewnativetoken) for more information on creating and balancing a transaction with a native asset attached.
 
-## Scenario 2 - Unexpectedly received multi-asset in `cardano-wallet`
+## Scenario 2 - Unexpectedly received multi-asset in cardano-wallet
 
 > Note: This scenario only applies to exchanges that use `cardano-wallet`.
 
@@ -102,7 +102,7 @@ http://localhost:8090/v2/wallets
     }
 ```
 
-### Token redemption or removing unwanted multi-assets from `cardano-wallet`
+### Token redemption or removing unwanted multi-assets from cardano-wallet
 
 Tokens created using a minting policy follow a predefined set of rules. The minting policy might allow token holders to burn or create new tokens, for example. In most cases, if you receive unwanted tokens, you will need to either return them to the issuer or sender, or put them somewhere else for safekeeping. Read the [minting policies topic](https://cardano-ledger.readthedocs.io/en/latest/explanations/policies.html) for more information on minting policies.
 
