adding some links

--- a/content/06-cardano-components/10-cardano-serialization-lib.mdx
+++ b/content/06-cardano-components/10-cardano-serialization-lib.mdx
@@ -34,6 +34,6 @@ You can find original [CDDL](https://cbor.io/tools.html) specifications at:
 
 ## Instructions
 
-You can find more instructions in the [docs folder here](https://github.com/Emurgo/cardano-serialization-lib/tree/master/doc/getting-started), or follow the link to the repository below.
+Before you start, see [building, testing and publishing tips here](https://github.com/Emurgo/cardano-serialization-lib/blob/master/README.rst#building). Then proceed exploring more in the [doc folder](https://github.com/Emurgo/cardano-serialization-lib/tree/master/doc/getting-started), or follow the link to the repository below.
 
 > For more information: [Go to GitHub repo <OpenInNew className='content-link' />](https://github.com/Emurgo/cardano-serialization-lib#cardano-serialization-lib)
