--- a/content/05-explore-cardano/02-cardano-architecture/03-cardano-db-sync-best-practices.mdx
+++ b/content/05-explore-cardano/02-cardano-architecture/03-cardano-db-sync-best-practices.mdx
@@ -3,60 +3,48 @@ title: Cardano DB Sync best practices
 metaTitle: Cardano DB Sync best practices
 ---
 
-This section outlines some best practices for using the Cardano DB Sync
-component.
+This section outlines some best practices for using the Cardano DB Sync component.
 
 ### Purpose of Cardano DB Sync
 
-The cardano-db-sync component is designed to work with a locally running Cardano
-node. The purpose of Cardano DB Sync is to follow the Cardano chain and fetch
-information from the chain and an internally-maintained copy of ledger state.
-Data is then extracted from the chain and inserted into a PostgreSQL database.
-SQL queries can then be written directly against the database schema or as
-queries embedded in any language with libraries for interacting with an SQL
-database.
+The purpose of Cardano DB Sync is to follow the Cardano chain and fetch information, including the ledger state, from the chain.  
+The Cardano DB Sync component works best with a Cardano node running on the local machine.  
+DB Sync uses the data extracted from the chain to build tables in a PostgreSQL database.  
+You can then run SQL queries against the database schema as queries embedded in any language that has libraries for interacting with an SQL database.  
+Besides running SQL queries from a program, you can interact with the database engine via the command line using [the psql executable](https://www.postgresql.org/docs/current/app-psql.html) that comes with PostgreSQL. With psql, you can execute queries directly, and access metadata such as the names of all the tables in the database (/d command) and the columns each table contains.
 
 Here are some examples of what you can do with a Cardano DB Sync instance on a
 specific network:
 
-- Look up details of any block, transaction, address, or stake pool on that
-  network, usually by the hash that identifies that item or the index into
-  another table.
+- Retrieve details of any block, transaction, address, or stake pool on that network, usually by the hash that identifies that item or the index into another table.
 - Get the balance of any stake address for a specific epoch.
-- Check the amount of ada that is delegated to each stake pool for a specific
-  epoch.
+- Check the amount of ada that is delegated to each stake pool for a specific epoch.
+
 
 For details of sample queries, see
 [Sample Cardano DB Sync queries](https://github.com/input-output-hk/cardano-db-sync/blob/master/doc/interesting-queries.md).
 
 **Recommended Hardware for Cardano DB Sync**
 
-We recommend the following hardware for cardano-db-sync (with both db-sync and
+We recommend the following hardware for Cardano DB Sync (with both DB Sync and
 the node running on the same machine):
 
-- A Linux distribution (for example: Debian, Ubuntu, RHEL, CentOS, Arch)
+- A Linux distribution (for example, Debian, Ubuntu, RHEL, CentOS, Arch)
 - 8 Gigabytes of RAM
 - 2 CPU cores
-- 50 Gigabytes or more of disk storage
+- 50 Gigabytes or more of disk storage. The Cardano team recommends using SSD for performance. 
+> The disk storage given is for DB Sync. You will need additional storage for synchronization with the blockchain.  
 
-The recommended configuration is to have the db-sync and the PostgreSQL server
-on the same machine. During syncing (where historical data is retrieved from the
-blockchain) there is a huge amount of data traffic between db-sync and the
-database. Traffic to a local database is significantly faster than traffic to a
-database on the local area network (LAN) or remotely to another location.
+The recommended configuration is to have the DB Sync and the PostgreSQL server on the same machine. During syncing (when retrieving historical data from the blockchain), there is a massive amount of data traffic between DB Sync and the database. Traffic to a local database is significantly faster than traffic to a database on the local area network (LAN) or remotely to another location.
 
-To run cardano-db-sync, you first need to have a locally-running cardano-node.
-For more information, see the
-[building and running instructions](https://github.com/input-output-hk/cardano-db-sync/blob/master/doc/building-running.md).
+To run Cardano DB Sync, you first need to run a full Cardano node.  
+For more information, see the [building and running instructions](https://github.com/input-output-hk/cardano-db-sync/blob/master/doc/building-running.md).
 
 **Sample Cardano DB Sync queries**
 
-We have compiled a list of sample SQL queries that can be run against the
-db-sync database.
+We have compiled a list of [sample SQL queries](https://github.com/input-output-hk/cardano-db-sync/blob/master/doc/interesting-queries.md) that you can run against the DB Sync database.
 
-These queries are run using the psql executable that is distributed with
-PostgreSQL. You can connect to the database from the cardano-db-sync git
-checkout using:
+You can run these queries using psql. You can connect to the database from the Cardano DB Sync git checkout using:
 
 ```
 PGPASSFILE=config/pgpass-mainnet psql cexplorer
