edits to address Niamh's review

--- a/content/06-cardano-components/10-cardano-serialization-lib.mdx
+++ b/content/06-cardano-components/10-cardano-serialization-lib.mdx
@@ -9,7 +9,7 @@ This is a library for serialization and deserialization of data structures used 
 
 ## Using the library
 
-Due to the portability of Rust, you can bind to the native Rust library from any common programming language (including C and WebAssembly). This library generates both [Typescript](https://www.typescriptlang.org/) and [Flow](https://flow.org/) type definitions, and you can check out possible options by just looking at Flow types, which you can find [here](https://github.com/Emurgo/cardano-serialization-lib/blob/master/rust/pkg/cardano_serialization_lib.js.flow). You can also explore the [example folder](https://github.com/Emurgo/cardano-serialization-lib/tree/master/example) to see how to use this library from Typescript and experiment with it.
+Due to the portability of [Rust](https://www.rust-lang.org/), you can bind to the native Rust library from any common programming language (including C and WebAssembly). This library generates both [Typescript](https://www.typescriptlang.org/) and [Flow](https://flow.org/) type definitions, and you can check out possible options by just looking at [Flow types](https://github.com/Emurgo/cardano-serialization-lib/blob/master/rust/pkg/cardano_serialization_lib.js.flow). You can also explore the [example folder](https://github.com/Emurgo/cardano-serialization-lib/tree/master/example) to see how to use this library from Typescript and experiment with it.
 
 ### Benefits of using this library
 
