--- a/content/06-cardano-components/11-daedalus-wallet.mdx
+++ b/content/06-cardano-components/11-daedalus-wallet.mdx
@@ -2,8 +2,11 @@
 title: Daedalus wallet
 metaTitle: Daedalus wallet
 ---
+import { OpenInNew } from 'styled-icons/material/OpenInNew'
+import { User } from 'styled-icons/boxicons-regular/User'
 
 ## Overview
+
 Daedalus wallet is a full-node hierarchical deterministic (HD) desktop wallet for the ada currency. Daedalus comes bundled with a full Cardano node, and it stores the entire history of Cardano blockchain and validates all blocks and transactions for fully trustless and autonomous operation. 
 
 ### Key features
@@ -26,4 +29,5 @@ You should download the Daedalus wallet from our [official website](https://daed
 - Daedalus runs on Windows, Mac, and Linux operating systems. 
 - After downloading, the wallet will sync with the blockchain to create a local copy of it. Currently, Daedalus (and the blockchain) take up around 6GB of local storage. 
 
-For more information about Daedalus, visit our [dedicated Helpdesk page](https://iohk.zendesk.com/hc/en-us/categories/360000877653-Daedalus-Mainnet).
+> For more information about Daedalus: [visit the dedicated Helpdesk page <OpenInNew className='content-link' />](https://iohk.zendesk.com/hc/en-us/categories/360000877653-Daedalus-Mainnet)
+
