--- a/content/06-cardano-components/11-daedalus-wallet.mdx
+++ b/content/06-cardano-components/11-daedalus-wallet.mdx
@@ -16,7 +16,7 @@ Daedalus wallet is a full-node hierarchical deterministic (HD) desktop wallet fo
 - Trustless operation with locally running full Cardano node which independently validates full transaction history of the blockchain
 - Supports Cardano network by participating in Cardano protocol
 - Wallet backup and restoration using mnemonics phrases
-- Support for staking coming with Shelley release 
+- Staking Support
 - Complete autonomy without reliance on third-party servers and services
 - Paper wallet generator for offline storage of funds
 
