--- a/content/02-getting-started/01-installing-the-cardano-node.mdx
+++ b/content/02-getting-started/01-installing-the-cardano-node.mdx
@@ -3,13 +3,13 @@ title: Installing the Cardano node
 metaTitle: Installing the Cardano node
 ---
 
-## Download pre-compiled executables
+## Downloading pre-compiled executables
 
 You can install the Cardano node and cli using
 [pre-compiled executable files](https://github.com/input-output-hk/cardano-node#linux-executable)
 for your platform.
 
-## Build from source
+## Building from source
 
 Alternatively, if you want to build from source, there are two options
 available to you. Depending on your build tool preference, you can build from
@@ -21,7 +21,7 @@ the source code using either of the following:
 Once you have installed the node, you need to
 [specify the configuration parameters](https://github.com/input-output-hk/cardano-node/blob/master/doc/getting-started/understanding-config-files.md/).
 
-## Use Docker
+## Using Docker
 There is also a Docker image available that you can use. 
 
 ### Setting up Docker
