--- a/content/08-marlowe/01-learn-about-marlowe.mdx
+++ b/content/08-marlowe/01-learn-about-marlowe.mdx
@@ -25,7 +25,7 @@ Contracts can be built by putting together a small number of these constructs th
 
 Depending on the current state of a contract, it may make a choice between two alternative future courses of action, which are themselves contracts. When no further actions are required, the contract will close, and any remaining currency in the contract will be refunded.
 
-When a contract runs, the roles involved are fulfilled by participants, which are identities on the blockchain. Each role is represented by a token on the chain, and roles can be transferred during contract execution (be traded, in other words). 
+When a contract is run, the roles involved are fulfilled by participants, which are identities on the blockchain. Each role is represented by a token on the chain, and roles can be transferred, or traded, during contract execution. 
 
 ### How can I use the Marlowe Playground?
 
