--- a/content/12-tools/02-release-notes.mdx
+++ b/content/12-tools/02-release-notes.mdx
@@ -15,7 +15,7 @@ Name | Version | Release Date
 [Cardano RTView](https://github.com/input-output-hk/cardano-rt-view) | [0.3.0](https://github.com/input-output-hk/cardano-rt-view/releases/tag/0.3.0) | 15 Janurary 2021
 [Cardano DB Sync](https://github.com/input-output-hk/cardano-db-sync/releases) | [10.0.1](https://github.com/input-output-hk/cardano-db-sync/releases/tag/10.0.1) | 14 July 2021
 [Smash](https://github.com/input-output-hk/smash) | [1.4.0](https://github.com/input-output-hk/smash/releases/tag/v1.4.0) | 29 January 2021
-[Cardano Rest](https://github.com/input-output-hk/cardano-rest) | [3.1.2](https://github.com/input-output-hk/cardano-rest/releases/tag/3.1.2) | 1 February 2021
+[Cardano Rosetta](https://github.com/input-output-hk/cardano-rosetta) | [1.3.0](https://github.com/input-output-hk/cardano-rosetta/releases/tag/1.3.0) | 28 July 2021
 [Cardano GraphQL](https://github.com/input-output-hk/cardano-graphql) | [5.0.0](https://github.com/input-output-hk/cardano-graphql/releases/tag/5.0.0) | 26 July 2021
 [Cardano Explorer](https://github.com/input-output-hk/cardano-explorer-app) | [1.5.0](https://github.com/input-output-hk/cardano-explorer-app/releases/tag/1.5.0) | 6 April 2021
 [Cardano Transactions](https://github.com/input-output-hk/cardano-transactions) | [1.0.0](https://github.com/input-output-hk/cardano-transactions/releases/tag/1.0.0) | 21 April 2020
