--- a/content/04-core-concepts/14-ledger.mdx
+++ b/content/04-core-concepts/14-ledger.mdx
@@ -1,4 +1,7 @@
-## Ledger explainer 
+---
+title: Ledger explainer
+metaTitle: Ledger explainer 
+---
 
 Cardano, like any other blockchain, is a distributed ledger or database that records all transactions and blocks created on the chain. This database shares records across all participants and synchronizes continuously with blockchain activities to provide transparent and up-to-date information for anyone to access. 
 
