signpost to CF portal and minor updates

--- a/content/01-introduction.mdx
+++ b/content/01-introduction.mdx
@@ -3,7 +3,11 @@ title: 'Introduction'
 metaTitle: 'Introduction'
 metaDescription: 'Introduction'
 ---
-Welcome to the central hub for Cardano documentation, here you will find content that describes and supports the components and features that are live on Cardano mainnet. If you are interested in developing on Cardano, experimenting with the Cardano testnet, or other test development environments, please visit  [Cardano Developers](https://developers.cardano.org/).
+Welcome to the central hub for Cardano documentation. Here you will find content that describes and supports the features that are live on Cardano mainnet. 
+
+This includes explainers, information on all the core components of Cardano, details of how Cardano was designed and its architecture, how the Cardano network works, explanations of the fee structure and monetary policy, release notes, a compatibility matrix, a glossary of terms, as well as community resources. We also have content to support native tokens, how to use Marlowe and Rosetta, and we are currently building out materials for how to on board and work with Plutus. 
+
+If you are interested in developing on Cardano, experimenting with the Cardano testnet, or other test development environments, please visit  [Cardano Testnets](https://testnets.cardano.org/). If you are interested in building tools on Cardano, integrating with Cardano, and connecting with the wider developer community, please visit the [Cardano Developer Portal](https://developers.cardano.org/home/).
 
 **Cardano explained**
 
